kubernetes-voting-application/voteapp-k8s/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    role: api
    env: demo
spec:
  replicas: 2
  
  selector:
    matchLabels:
      role: api
  
  template:
    metadata:
      labels:
        role: api
    spec:
      containers:
      - name: api
        image: gnvsai2020/voteapp-api
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
