kubernetes-voting-application/voteapp-k8s/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    role: api
    env: demo
spec:
  type: NodePort
  ports:
   - protocol: TCP
     port: 8080
     targetPort: 8080
     nodePort: 30010
  selector:
    role: api
