kubernetes-voting-application/voteapp-k8s/api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  labels:
    role: api
    env: demo
spec:
  rules:
  - host: api.192.168.49.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port: 
              number: 8080
